[JSC] isNaN should insert Check instead of fixup edge when converting it to constant https://bugs.webkit.org/show_bug.cgi?id=258592 rdar://111223515

Reviewed by Alexey Shvayka.

Since it is converting to a constant, edge will be missing.
Insert a check instead.

* Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupNode):

Canonical link: https://commits.webkit.org/265570@main